styles.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  display: grid;
  grid-template-columns: 1fr 4fr;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

img {
  max-width: 100%;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

.sidebar {
  background-color: #1992d4;
  padding: 1em;
  color: white;
}

.sidebar__logo {
  display: flex;
  align-items: center;
}

.sidebar__logo > img {
  flex: 1;
  max-height: 50px;
}

.sidebar__logo > p {
  flex: 3;
  font-size: 1.5rem;
  margin-left: 1em;
}

.sidebar > ul {
  margin-top: 2.5em;
}

.sidebar > ul > li {
  display: flex;
  align-items: center;
  gap: 1em;
}

.sidebar > ul > li > img {
  max-height: 30px;
}

.sidebar > ul > li + li {
  margin-top: 1em;
}

/* main */

main {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 8fr;
}

header {
  padding: 2em;
  display: grid;
  grid-template-columns: 4fr 2fr;
  grid-template-rows: 2;
  border-bottom: 3px solid rgb(211, 210, 210);
}

.search {
  display: flex;
  align-items: center;
  gap: 1em;
}

.search > img {
  max-width: 25px;
}

.search > input {
  border: none;
  border-radius: 1em;
  background-color: #e2e8f0;
  width: 100%;
  padding: 0.5em;
}

.search > input::placeholder {
  visibility: hidden;
}

.status {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 1em;
  font-weight: bold;
}

.status > img {
  max-width: 25px;
}

.welcome {
  display: flex;
  align-items: center;
  gap: 1em;
  font-weight: bold;
}

.welcome > img {
  border-radius: 50%;
  height: 60px;
  width: 60px;
}

.welcome > div > p:first-child {
  font-size: 0.75rem;
  margin: 0;
}

.welcome > div > p:last-child {
  margin: 0;
  font-size: 1.2rem;
}

.header__buttons {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 1.5em;
}

.header__buttons > button {
  border: none;
  border-radius: 1em;
  background-color: #1992d4;
  color: white;
  padding: 0.5em 1em;
  cursor: pointer;
}

/* content  */

.content {
  background-color: #e2e8f0;
  display: grid;
  grid-template-columns: 5fr 2fr;
  align-items: start;
  align-content: start;
}

.projects {
  grid-row: span 2;
  padding: 1em;
}

.projects > .cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 1em;
}

.projects > h2,
.announcements > h2,
.trending > h2 {
  font-size: 1.125rem;
}

.projects > .cards > .card {
  background-color: white;
  border-radius: 8px;
  border-left: 5px solid #f0b429;
  padding: 1.5em 1em;
  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
}

.card__heading {
  font-weight: bold;
  margin: 0;
}

.card__desc {
  opacity: 0.9;
  margin: 0;
}

.card__icons {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 1em;
  margin: 1em;
}

.card__icons > img {
  max-width: 50px;
}

.announcements,
.trending {
  padding: 1em 1em 1em 0.1em;
}

.announcements > ul,
.trending > ul {
  background-color: white;
  padding: 1em 1.5em;
  border-radius: 10px;
  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
}

.announcements > ul > li {
  padding: 0.5em;
}

.announcements > ul > li > h4 {
  margin: 0;
  font-size: 0.9rem;
}

.announcements > ul > li > p {
  font-size: 0.8rem;
  opacity: 0.9;
  margin: 0;
}

.announcements > ul > li + li {
  border-top: 1px solid #000;
}

.trending {
  grid-column: 2;
  margin-top: 0;
}

.trending > ul > li + li {
  margin-top: 1em;
}

.trending > ul > li {
  display: flex;
  align-items: center;
  gap: 1em;
}

.trending > ul > li > img {
  width: 50px;
  height: 50px;
  object-fit: cover;
  border-radius: 50%;
}

.trending > ul > li > div > * {
  margin: 0;
}

.trending > ul > li > div > p:first-child {
  font-weight: 500;
}

.trending > ul > li > div > p:nth-child(2) {
  opacity: 0.9;
  font-size: 0.9rem;
}

